--- a/assets/products/978-5-496-02088-6.html
+++ b/assets/products/978-5-496-02088-6.html
@@ -41,9 +41,7 @@
         </div>
         <footer>
             <hr>
-            <p>
-                Все права защищены © 2018
-            </p>
+            <p>Все права защищены © 2018</p>
         </footer>
     </body>
 </html>
