--- a/assets/products/978-5-496-02088-6.html
+++ b/assets/products/978-5-496-02088-6.html
@@ -6,42 +6,47 @@
     </head>
     <body>
         <header>
-            <h1>Бестселлеры O'Reilly</h1>
             <nav>
+                <a href="../../index.html"><img src="../img/logo_oreilly.jpg" height="20"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
+                    <li><a href="../../catalog.html">Каталог</a></li>
+                    <li><a href="../../contact.html">Контакты</a></li>
                 </ul>
             </nav>
         </header>
         <div>
-            <h2>"Простой Python. Современный стиль программирования"</h2>
+            <h1>"Простой Python. Современный стиль программирования"</h1>
             <p>
                 <strong>
                     Автор:
                     <em>Любанович Б.</em>
-                </strong><br>
+                </strong>
+                <br>
             </p>
-            <img src="../img/49602088.jpg" alt="Простой Python"/>
+            <a href="../img/49602088.jpg" target="_blank"><img src="../img/49602088.jpg" alt="Простой Python" width="200"></a>
             <h3>Описание:</h3>
             <p>Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких тем.</p>
             <h3>Характеристики:</h3>
-            <p>
-                Тема: Программирование<br>
-                Год: 2018<br>
-                Страниц: 480<br>
-                ISBN: 978-5-496-02088-6<br>
-            </p>
+            <ul>
+                <li>Тема: Программирование</li>
+                <li>Год: 2018</li>
+                <li>Страниц: 480</li>
+                <li>ISBN: 978-5-496-02088-6</li>
+            </ul>
             <h3>Подробное описание:</h3>
-            <p>Эта книга идеально подходит как для начинающих программистов, так и для тех, кто только собирается осваивать Python,
+            <p>
+                Эта книга идеально подходит как для начинающих программистов, так и для тех, кто только собирается осваивать Python,
                 но уже имеет опыт программирования на других языках. В ней подробно рассматриваются самые современные пакеты и
                 библиотеки Python. Стилистически издание напоминает руководство с вкраплениями кода, подробно объясняя различные
                 концепции Python 3. Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких
                 тем. Прочитав эту книгу, вы не только убедитесь, что Python — это вкусно, но и освоите искусство тестирования,
-                отладки, многократного использования кода, а также научитесь применять Python в различных предметных областях. </p>
+                отладки, многократного использования кода, а также научитесь применять Python в различных предметных областях.
+            </p>
         </div>
         <footer>
             <hr>
-            <p>Все права защищены © 2018</p>
+            <p>Все права защищены &#169 2018</p>
         </footer>
     </body>
 </html>
