--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
     </head>
     <body>
         <header>
-            <h1>Бестселлеры O'Reilly</h1>
             <nav>
+                <a href="index.html"><img src="assets/img/logo_oreilly.jpg" height="20"></a>
                 <ul>
-                    <li><a href="assets/products/978-5-496-02088-6.html">Простой Python. Современный стиль программирования</a></li>
-                    <li><a href="assets/products/978-5-496-02463-1.html">Веб-разработка. Исчерпывающее руководство</a></li>
-                    <li><a href="assets/products/978-5-496-03068-7.html">Python для сложных задач: наука о данных и машинное обучение</a></li>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
                 </ul>
             </nav>
+            <hr>
         </header>
-        <div></div>
+        <div>
+            <h1>Бестселлеры O'Reilly</h1>
+            <h3>Добро пожаловать в мир книг издательства O'Reilly</h3>
+            <p>
+                O'Reilly — одно из крупнейших издательств — начало свою деятельность в 1984 году
+                с создания руководств для вендоров операционной системы Unix. На сегодняшний день ассортимент
+                наименований этого издательства весьма широк: от книг для любителей цифровой фотографии до изданий,
+                предназначенных профессиональным разработчикам программного обеспечения. Книги издательства O'Reilly
+                отличаются достоверностью, полезны и интересны.
+            </p>
+        </div>
         <footer>
             <hr>
-            <p>Все права защищены © 2018</p>
+            <p>Все права защищены &#169 2018</p>
         </footer>
     </body>
 </html>
