--- a/assets/products/978-5-496-02463-1.html
+++ b/assets/products/978-5-496-02463-1.html
@@ -6,41 +6,48 @@
     </head>
     <body>
         <header>
-            <h1>Бестселлеры O'Reilly</h1>
             <nav>
+                <a href="../../index.html"><img src="../img/logo_oreilly.jpg" height="20"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
+                    <li><a href="../../catalog.html">Каталог</a></li>
+                    <li><a href="../../contact.html">Контакты</a></li>
                 </ul>
             </nav>
         </header>
         <div>
-            <h2>"Веб-разработка. Исчерпывающее руководство"</h2>
+            <h1>"Веб-разработка. Исчерпывающее руководство"</h1>
             <p>
                 <strong>
                     Автор:
                     <em>Макдональд М.</em>
-                </strong><br>
+                </strong>
+                <br>
             </p>
-            <img src="../img/49602463.jpg" alt="Веб-разработка"/>
+            <a href="../img/49602463.jpg" target="_blank"><img src="../img/49602463.jpg" alt="Веб-разработка" width="200"></a>
             <h3>Описание:</h3>
-            <p>Эта доступная книга, не перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых,
-                чтобы создать сайт и запустить его в Вебе.</p>
-            <h3>Характеристики:</h3>
             <p>
-                Тема: Веб-разработка<br>
-                Год: 2017<br>
-                Страниц: 640<br>
-                ISBN: 978-5-496-02463-1<br>
+                Эта доступная книга, не перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых,
+                чтобы создать сайт и запустить его в Вебе.
             </p>
+            <h3>Характеристики:</h3>
+            <ul>
+                <li>Тема: Веб-разработка</li>
+                <li>Год: 2017</li>
+                <li>Страниц: 640</li>
+                <li>ISBN: 978-5-496-02463-1</li>
+            </ul>
             <h3>Подробное описание:</h3>
-            <p>Можно без труда создать добротный веб-сайт, вооружившись обычным компьютером и некоторыми амбициями. Хотите сделать
+            <p>
+                Можно без труда создать добротный веб-сайт, вооружившись обычным компьютером и некоторыми амбициями. Хотите сделать
                 собственный блог, интернет-магазин, форум, ресурс с рекламой мероприятия? Не проблема! Эта доступная книга, не
                 перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых, чтобы создать сайт и
-                запустить его в Вебе.</p>
+                запустить его в Вебе.
+            </p>
         </div>
         <footer>
             <hr>
-            <p>Все права защищены © 2018</p>
+            <p>Все права защищены &#169 2018</p>
         </footer>
     </body>
 </html>
