--- a/assets/products/978-5-496-03068-7.html
+++ b/assets/products/978-5-496-03068-7.html
@@ -6,44 +6,51 @@
     </head>
     <body>
         <header>
-            <h1>Бестселлеры O'Reilly</h1>
             <nav>
+                <a href="../../index.html"><img src="../img/logo_oreilly.jpg" height="20"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
+                    <li><a href="../../catalog.html">Каталог</a></li>
+                    <li><a href="../../contact.html">Контакты</a></li>
                 </ul>
             </nav>
         </header>
         <div>
-            <h2>"Python для сложных задач: наука о данных и машинное обучение"</h2>
+            <h1>"Python для сложных задач: наука о данных и машинное обучение"</h1>
             <p>
                 <strong>
                     Автор:
                     <em>Плас вандер Дж.</em>
-                </strong><br>
+                </strong>
+                <br>
             </p>
-            <img src="../img/49603068.jpg" alt="Python для сложных задач"/>
+            <a href="../img/49603068.jpg" target="_blank"><img src="../img/49603068.jpg" alt="Python для сложных задач" width="200"></a>
             <h3>Описание:</h3>
-            <p>Подробное руководство по самым разным вычислительным и статистическим методам, без которых немыслима
-                любая интенсивная обработка данных, научные исследования и передовые разработки.</p>
-            <h3>Характеристики:</h3>
             <p>
-                Тема: Программирование<br>
-                Год: 2018<br>
-                Страниц: 576<br>
-                ISBN: 978-5-496-03068-7<br>
+                Подробное руководство по самым разным вычислительным и статистическим методам, без которых немыслима
+                любая интенсивная обработка данных, научные исследования и передовые разработки.
             </p>
+            <h3>Характеристики:</h3>
+            <ul>
+                <li>Тема: Программирование</li>
+                <li>Год: 2018</li>
+                <li>Страниц: 576</li>
+                <li>ISBN: 978-5-496-03068-7</li>
+            </ul>
             <h3>Подробное описание:</h3>
-            <p>Книга «Python Data Science Handbook» - это подробное руководство по самым разным вычислительным и статистическим
+            <p>
+                Книга «Python Data Science Handbook» - это подробное руководство по самым разным вычислительным и статистическим
                 методам, без которых немыслима любая интенсивная обработка данных, научные исследования и передовые разработки.
                 Читатели, уже имеющие опыт программирования и желающие эффективно использовать Python в сфере Data Science, найдут
                 в этой книге ответы на всевозможные вопросы, например: 1) как мне считать этот формат данных в мой скрипт? 2) Как
                 преобразовать, очистить эти данные и манипулировать ими? 3) Как визуализировать данные такого типа? Как при помощи
                 этих данных разобраться в ситуации, получить ответы на вопросы, построить статистические модели или реализовать
-                машинное обучение?</p>
+                машинное обучение?
+            </p>
         </div>
         <footer>
             <hr>
-            <p>Все права защищены © 2018</p>
+            <p>Все права защищены &#169 2018</p>
         </footer>
     </body>
 </html>
