--- a/assets/products/978-5-496-02463-1.html
+++ b/assets/products/978-5-496-02463-1.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Веб-разработка. Исчерпывающее руководство</title>
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
-    <body>
+    <body class="products">
         <header>
             <nav>
-                <a href="../../index.html"><img src="../img/logo_oreilly.jpg" height="20"></a>
+                <a href="../../index.html"><img src="../img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
                     <li><a href="../../catalog.html">Каталог</a></li>
@@ -16,7 +17,7 @@
             </nav>
             <hr>
         </header>
-        <div>
+        <div class="content">
             <h1>"Веб-разработка. Исчерпывающее руководство"</h1>
             <p>
                 <strong>
@@ -27,7 +28,7 @@
             </p>
             <a href="../img/49602463.jpg" target="_blank"><img src="../img/49602463.jpg" alt="Веб-разработка" width="200"></a>
             <h3>Описание:</h3>
-            <p>
+            <p id="shortdesc">
                 Эта доступная книга, не перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых,
                 чтобы создать сайт и запустить его в Вебе.
             </p>
@@ -39,7 +40,7 @@
                 <li>ISBN: 978-5-496-02463-1</li>
             </ul>
             <h3>Подробное описание:</h3>
-            <p>
+            <p id="longdesc">
                 Можно без труда создать добротный веб-сайт, вооружившись обычным компьютером и некоторыми амбициями. Хотите сделать
                 собственный блог, интернет-магазин, форум, ресурс с рекламой мероприятия? Не проблема! Эта доступная книга, не
                 перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых, чтобы создать сайт и
