--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Бестселлеры O'Reilly</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
-    <body>
+    <body class="contact">
         <header>
             <nav>
-                <a href="index.html"><img src="assets/img/logo_oreilly.jpg" height="20"></a>
+                <a href="index.html"><img src="assets/img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
@@ -35,10 +36,11 @@
                     </select><br>
                     <label for="usertext">Ваше сообщение:</label><br>
                     <textarea id="usertext" cols="43" rows="4"></textarea>
+                    <button type="submit">Отправить</button>
                 </fieldset>
             </form>
             <h2>Адрес</h2>
-            <p>
+            <p id="longdesc">
             450000, г. Уфа, ул. Ленина, 1<br>
             Email: orelly@yandex.ru<br>
             Телефон: +7 (347) 2552255<br>
