--- a/assets/products/978-5-496-02088-6.html
+++ b/assets/products/978-5-496-02088-6.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Простой Python. Современный стиль программирования</title>
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
-    <body>
+    <body class="products">
         <header>
             <nav>
-                <a href="../../index.html"><img src="../img/logo_oreilly.jpg" height="20"></a>
+                <a href="../../index.html"><img src="../img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
                     <li><a href="../../catalog.html">Каталог</a></li>
@@ -16,7 +17,7 @@
             </nav>
             <hr>
         </header>
-        <div>
+        <div class="content">
             <h1>"Простой Python. Современный стиль программирования"</h1>
             <p>
                 <strong>
@@ -27,7 +28,7 @@
             </p>
             <a href="../img/49602088.jpg" target="_blank"><img src="../img/49602088.jpg" alt="Простой Python" width="200"></a>
             <h3>Описание:</h3>
-            <p>Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких тем.</p>
+            <p id="shortdesc">Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких тем.</p>
             <h3>Характеристики:</h3>
             <ul>
                 <li>Тема: Программирование</li>
@@ -36,7 +37,7 @@
                 <li>ISBN: 978-5-496-02088-6</li>
             </ul>
             <h3>Подробное описание:</h3>
-            <p>
+            <p id="longdesc">
                 Эта книга идеально подходит как для начинающих программистов, так и для тех, кто только собирается осваивать Python,
                 но уже имеет опыт программирования на других языках. В ней подробно рассматриваются самые современные пакеты и
                 библиотеки Python. Стилистически издание напоминает руководство с вкраплениями кода, подробно объясняя различные
