--- a/assets/products/978-5-496-03068-7.html
+++ b/assets/products/978-5-496-03068-7.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Python для сложных задач: наука о данных и машинное обучение</title>
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
-    <body>
+    <body class="products">
         <header>
             <nav>
-                <a href="../../index.html"><img src="../img/logo_oreilly.jpg" height="20"></a>
+                <a href="../../index.html"><img src="../img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
                     <li><a href="../../catalog.html">Каталог</a></li>
@@ -16,7 +17,7 @@
             </nav>
             <hr>
         </header>
-        <div>
+        <div class="content">
             <h1>"Python для сложных задач: наука о данных и машинное обучение"</h1>
             <p>
                 <strong>
@@ -27,7 +28,7 @@
             </p>
             <a href="../img/49603068.jpg" target="_blank"><img src="../img/49603068.jpg" alt="Python для сложных задач" width="200"></a>
             <h3>Описание:</h3>
-            <p>
+            <p id="shortdesc">
                 Подробное руководство по самым разным вычислительным и статистическим методам, без которых немыслима
                 любая интенсивная обработка данных, научные исследования и передовые разработки.
             </p>
@@ -39,7 +40,7 @@
                 <li>ISBN: 978-5-496-03068-7</li>
             </ul>
             <h3>Подробное описание:</h3>
-            <p>
+            <p id="longdesc">
                 Книга «Python Data Science Handbook» - это подробное руководство по самым разным вычислительным и статистическим
                 методам, без которых немыслима любая интенсивная обработка данных, научные исследования и передовые разработки.
                 Читатели, уже имеющие опыт программирования и желающие эффективно использовать Python в сфере Data Science, найдут
