--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Бестселлеры O'Reilly</title>
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <header>
             <nav>
-                <a href="index.html"><img src="assets/img/logo_oreilly.jpg" height="20"></a>
+                <a href="index.html"><img src="assets/img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
