--- a/assets/products/978-5-496-02088-6.html
+++ b/assets/products/978-5-496-02088-6.html
@@ -8,10 +8,10 @@
     <body class="products">
         <header>
             <nav>
-                <a href="../../index.html"><img src="../img/logo_oreilly.png"></a>
+                <a id="logo" href="../../index.html"><img src="../img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
-                    <li><a href="../../catalog.html">Каталог</a></li>
+                    <li id="selected"><a href="../../catalog.html">Каталог</a></li>
                     <li><a href="../../contact.html">Контакты</a></li>
                 </ul>
             </nav>
@@ -30,12 +30,33 @@
             <h3>Описание:</h3>
             <p id="shortdesc">Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких тем.</p>
             <h3>Характеристики:</h3>
-            <ul>
-                <li>Тема: Программирование</li>
-                <li>Год: 2018</li>
-                <li>Страниц: 480</li>
-                <li>ISBN: 978-5-496-02088-6</li>
-            </ul>
+            <table>
+                <tbody>
+                    <tr>
+                        <td rowspan="4">🕮</td>
+                        <td>Тема:</td>
+                        <td>Программирование</td>
+                    </tr>
+                    <tr>
+                        <td>Год:</td>
+                        <td>2018</td>
+                    </tr>
+                    <tr>
+                        <td>Страниц:</td>
+                        <td>480</td>
+                    </tr>
+                    <tr>
+                        <td>ISBN:</td>
+                        <td>978-5-496-02088-6</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!--<ul>-->
+                <!--<li>Тема: Программирование</li>-->
+                <!--<li>Год: 2018</li>-->
+                <!--<li>Страниц: 480</li>-->
+                <!--<li>ISBN: 978-5-496-02088-6</li>-->
+            <!--</ul>-->
             <h3>Подробное описание:</h3>
             <p id="longdesc">
                 Эта книга идеально подходит как для начинающих программистов, так и для тех, кто только собирается осваивать Python,
