--- a/assets/products/978-5-496-03068-7.html
+++ b/assets/products/978-5-496-03068-7.html
@@ -8,10 +8,10 @@
     <body class="products">
         <header>
             <nav>
-                <a href="../../index.html"><img src="../img/logo_oreilly.png"></a>
+                <a id="logo" href="../../index.html"><img src="../img/logo_oreilly.png"></a>
                 <ul>
                     <li><a href="../../index.html">Главная</a></li>
-                    <li><a href="../../catalog.html">Каталог</a></li>
+                    <li id="selected"><a href="../../catalog.html">Каталог</a></li>
                     <li><a href="../../contact.html">Контакты</a></li>
                 </ul>
             </nav>
