--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <header>
             <nav>
-                <a href="index.html"><img src="assets/img/logo_oreilly.png"></a>
+                <a id="logo" href="index.html"><img src="assets/img/logo_oreilly.png"></a>
                 <ul>
-                    <li><a href="index.html">Главная</a></li>
+                    <li id="selected"><a href="index.html">Главная</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="contact.html">Контакты</a></li>
                 </ul>
