--- a/catalog.html
+++ b/catalog.html
@@ -6,45 +6,67 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a id="logo" href="index.html"><img src="assets/img/logo_oreilly.png"></a>
-                <ul>
-                    <li><a href="index.html">Главная</a></li>
-                    <li id="selected"><a href="catalog.html">Каталог</a></li>
-                    <li><a href="contact.html">Контакты</a></li>
-                </ul>
-            </nav>
-            <hr>
-        </header>
-        <div>
-            <h1>Каталог</h1>
-            <h3>Добро пожаловать в мир книг издательства O'Reilly</h3>
-            <p>
-                <a href="assets/products/978-5-496-02088-6.html">
-                    <img src="assets/img/49602088.jpg" alt="Простой Python" width="200">
-                    <br>
-                    <span>Простой Python. Современный стиль программирования</span>
-                </a>
-            </p>
-            <p>
-                <a href="assets/products/978-5-496-02463-1.html">
-                    <img src="assets/img/49602463.jpg" alt="Веб-разработка" width="200">
-                    <br>
-                    <span>Веб-разработка. Исчерпывающее руководство</span>
-                </a>
-            </p>
-            <p>
-                <a href="assets/products/978-5-496-03068-7.html">
-                    <img src="assets/img/49603068.jpg" alt="Python для сложных задач" width="200">
-                    <br>
-                    <span>Python для сложных задач: наука о данных и машинное обучение</span>
-                </a>
-            </p>
+        <div class="container">
+            <header>
+                <nav>
+                    <a id="logo" href="index.html"><img src="assets/img/logo_oreilly.png"></a>
+                    <ul>
+                        <li><a href="index.html">Главная</a></li>
+                        <li id="selected"><a href="catalog.html">Каталог</a></li>
+                        <li><a href="contact.html">Контакты</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section>
+                <h1>Каталог</h1>
+                <div class="block">
+                    <p class="storegrid">
+                        <a href="assets/products/978-5-496-02088-6.html">
+                            <img src="assets/img/49602088.jpg" alt="Простой Python">
+                            <br>
+                            <span>Простой Python. Современный стиль программирования</span>
+                        </a>
+                    </p>
+                    <p class="storegrid">
+                        <a href="assets/products/978-5-496-02463-1.html">
+                            <img src="assets/img/49602463.jpg" alt="Веб-разработка">
+                            <br>
+                            <span>Веб-разработка. Исчерпывающее руководство</span>
+                        </a>
+                    </p>
+                    <p class="storegrid">
+                        <a href="assets/products/978-5-496-03068-7.html">
+                            <img src="assets/img/49603068.jpg" alt="Python для сложных задач">
+                            <br>
+                            <span>Python для сложных задач: наука о данных и машинное обучение</span>
+                        </a>
+                    </p>
+                    <p class="storegrid">
+                        <a href="assets/products/978-5-496-02088-6.html">
+                            <img src="assets/img/49602088.jpg" alt="Простой Python">
+                            <br>
+                            <span>Простой Python. Современный стиль программирования</span>
+                        </a>
+                    </p>
+                    <p class="storegrid">
+                        <a href="assets/products/978-5-496-02463-1.html">
+                            <img src="assets/img/49602463.jpg" alt="Веб-разработка">
+                            <br>
+                            <span>Веб-разработка. Исчерпывающее руководство</span>
+                        </a>
+                    </p>
+                    <p class="storegrid">
+                        <a href="assets/products/978-5-496-03068-7.html">
+                            <img src="assets/img/49603068.jpg" alt="Python для сложных задач">
+                            <br>
+                            <span>Python для сложных задач: наука о данных и машинное обучение</span>
+                        </a>
+                    </p>
+                </div>
+            </section>
+            <footer>
+                <p>Все права защищены &#169 2018</p>
+            </footer>
         </div>
-        <footer>
-            <hr>
-            <p>Все права защищены &#169 2018</p>
-        </footer>
     </body>
 </html>
