--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <a id="logo" href="index.html"><img src="assets/img/logo_oreilly.png"></a>
-                <ul>
-                    <li id="selected"><a href="index.html">Главная</a></li>
-                    <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="contact.html">Контакты</a></li>
-                </ul>
-            </nav>
-            <hr>
-        </header>
-        <div>
-            <h1>Бестселлеры O'Reilly</h1>
-            <h3>Добро пожаловать в мир книг издательства O'Reilly</h3>
-            <p>
-                O'Reilly — одно из крупнейших издательств — начало свою деятельность в 1984 году
-                с создания руководств для вендоров операционной системы Unix. На сегодняшний день ассортимент
-                наименований этого издательства весьма широк: от книг для любителей цифровой фотографии до изданий,
-                предназначенных профессиональным разработчикам программного обеспечения. Книги издательства O'Reilly
-                отличаются достоверностью, полезны и интересны.
-            </p>
+        <div class="container">
+            <header>
+                <nav>
+                    <a id="logo" href="index.html"><img src="assets/img/logo_oreilly.png"></a>
+                    <ul>
+                        <li id="selected"><a href="index.html">Главная</a></li>
+                        <li><a href="catalog.html">Каталог</a></li>
+                        <li><a href="contact.html">Контакты</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section>
+                <h1>Бестселлеры O'Reilly</h1>
+                <h2>Добро пожаловать в мир книг издательства O'Reilly</h2>
+                <p class="textjustify">
+                    O'Reilly — одно из крупнейших издательств — начало свою деятельность в 1984 году
+                    с создания руководств для вендоров операционной системы Unix. На сегодняшний день ассортимент
+                    наименований этого издательства весьма широк: от книг для любителей цифровой фотографии до изданий,
+                    предназначенных профессиональным разработчикам программного обеспечения. Книги издательства O'Reilly
+                    отличаются достоверностью, полезны и интересны.
+                </p>
+            </section>
+            <footer>
+                <p>Все права защищены &#169 2018</p>
+            </footer>
         </div>
-        <footer>
-            <hr>
-            <p>Все права защищены &#169 2018</p>
-        </footer>
     </body>
 </html>
