--- a/assets/products/978-5-496-02088-6.html
+++ b/assets/products/978-5-496-02088-6.html
@@ -6,70 +6,47 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body class="products">
-        <header>
-            <nav>
-                <a id="logo" href="../../index.html"><img src="../img/logo_oreilly.png"></a>
+        <div class="container">
+            <header>
+                <nav>
+                    <a id="logo" href="../../index.html"><img src="../img/logo_oreilly.png"></a>
+                    <ul>
+                        <li><a href="../../index.html">Главная</a></li>
+                        <li id="selected"><a href="../../catalog.html">Каталог</a></li>
+                        <li><a href="../../contact.html">Контакты</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section class="content">
+                <h1>"Простой Python. Современный стиль программирования"</h1>
+                <h3>Автор: <em>Любанович Б.</em></h3>
+                <div class="block">
+                    <a href="../img/49602088.jpg" target="_blank"><img src="../img/49602088.jpg" alt="Простой Python"></a>
+                    <p id="shortdesc">
+                        Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких тем.
+                    </p>
+                    <button type="submit">Купить</button>
+                </div>
+                <h3 class="stub">Характеристики:</h3>
                 <ul>
-                    <li><a href="../../index.html">Главная</a></li>
-                    <li id="selected"><a href="../../catalog.html">Каталог</a></li>
-                    <li><a href="../../contact.html">Контакты</a></li>
+                    <li>Тема: Программирование</li>
+                    <li>Год: 2018</li>
+                    <li>Страниц: 480</li>
+                    <li>ISBN: 978-5-496-02088-6</li>
                 </ul>
-            </nav>
-            <hr>
-        </header>
-        <div class="content">
-            <h1>"Простой Python. Современный стиль программирования"</h1>
-            <p>
-                <strong>
-                    Автор:
-                    <em>Любанович Б.</em>
-                </strong>
-                <br>
-            </p>
-            <a href="../img/49602088.jpg" target="_blank"><img src="../img/49602088.jpg" alt="Простой Python" width="200"></a>
-            <h3>Описание:</h3>
-            <p id="shortdesc">Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких тем.</p>
-            <h3>Характеристики:</h3>
-            <table>
-                <tbody>
-                    <tr>
-                        <td rowspan="4">🕮</td>
-                        <td>Тема:</td>
-                        <td>Программирование</td>
-                    </tr>
-                    <tr>
-                        <td>Год:</td>
-                        <td>2018</td>
-                    </tr>
-                    <tr>
-                        <td>Страниц:</td>
-                        <td>480</td>
-                    </tr>
-                    <tr>
-                        <td>ISBN:</td>
-                        <td>978-5-496-02088-6</td>
-                    </tr>
-                </tbody>
-            </table>
-            <!--<ul>-->
-                <!--<li>Тема: Программирование</li>-->
-                <!--<li>Год: 2018</li>-->
-                <!--<li>Страниц: 480</li>-->
-                <!--<li>ISBN: 978-5-496-02088-6</li>-->
-            <!--</ul>-->
-            <h3>Подробное описание:</h3>
-            <p id="longdesc">
-                Эта книга идеально подходит как для начинающих программистов, так и для тех, кто только собирается осваивать Python,
-                но уже имеет опыт программирования на других языках. В ней подробно рассматриваются самые современные пакеты и
-                библиотеки Python. Стилистически издание напоминает руководство с вкраплениями кода, подробно объясняя различные
-                концепции Python 3. Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких
-                тем. Прочитав эту книгу, вы не только убедитесь, что Python — это вкусно, но и освоите искусство тестирования,
-                отладки, многократного использования кода, а также научитесь применять Python в различных предметных областях.
-            </p>
+                <h3>Подробное описание:</h3>
+                <p id="longdesc">
+                    Эта книга идеально подходит как для начинающих программистов, так и для тех, кто только собирается осваивать Python,
+                    но уже имеет опыт программирования на других языках. В ней подробно рассматриваются самые современные пакеты и
+                    библиотеки Python. Стилистически издание напоминает руководство с вкраплениями кода, подробно объясняя различные
+                    концепции Python 3. Под обложкой вы найдете обширный материал от самых основ языка до сравнительно сложных и узких
+                    тем. Прочитав эту книгу, вы не только убедитесь, что Python — это вкусно, но и освоите искусство тестирования,
+                    отладки, многократного использования кода, а также научитесь применять Python в различных предметных областях.
+                </p>
+            </section>
+            <footer>
+                <p>Все права защищены &#169 2018</p>
+            </footer>
         </div>
-        <footer>
-            <hr>
-            <p>Все права защищены &#169 2018</p>
-        </footer>
     </body>
 </html>
