--- a/assets/products/978-5-496-02463-1.html
+++ b/assets/products/978-5-496-02463-1.html
@@ -6,50 +6,46 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body class="products">
-        <header>
-            <nav>
-                <a id="logo" href="../../index.html"><img src="../img/logo_oreilly.png"></a>
+        <div class="container">
+            <header>
+                <nav>
+                    <a id="logo" href="../../index.html"><img src="../img/logo_oreilly.png"></a>
+                    <ul>
+                        <li><a href="../../index.html">Главная</a></li>
+                        <li id="selected"><a href="../../catalog.html">Каталог</a></li>
+                        <li><a href="../../contact.html">Контакты</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <section class="content">
+                <h1>"Веб-разработка. Исчерпывающее руководство"</h1>
+                <h3>Автор: <em>Макдональд М.</em></h3>
+                <div class="block">
+                    <a href="../img/49602463.jpg" target="_blank"><img src="../img/49602463.jpg" alt="Веб-разработка"></a>
+                    <p id="shortdesc">
+                        Эта доступная книга, не перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых,
+                        чтобы создать сайт и запустить его в Вебе.
+                    </p>
+                    <button type="submit">Купить</button>
+                </div>
+                <h3 class="stub">Характеристики:</h3>
                 <ul>
-                    <li><a href="../../index.html">Главная</a></li>
-                    <li id="selected"><a href="../../catalog.html">Каталог</a></li>
-                    <li><a href="../../contact.html">Контакты</a></li>
+                    <li>Тема: Веб-разработка</li>
+                    <li>Год: 2017</li>
+                    <li>Страниц: 640</li>
+                    <li>ISBN: 978-5-496-02463-1</li>
                 </ul>
-            </nav>
-            <hr>
-        </header>
-        <div class="content">
-            <h1>"Веб-разработка. Исчерпывающее руководство"</h1>
-            <p>
-                <strong>
-                    Автор:
-                    <em>Макдональд М.</em>
-                </strong>
-                <br>
-            </p>
-            <a href="../img/49602463.jpg" target="_blank"><img src="../img/49602463.jpg" alt="Веб-разработка" width="200"></a>
-            <h3>Описание:</h3>
-            <p id="shortdesc">
-                Эта доступная книга, не перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых,
-                чтобы создать сайт и запустить его в Вебе.
-            </p>
-            <h3>Характеристики:</h3>
-            <ul>
-                <li>Тема: Веб-разработка</li>
-                <li>Год: 2017</li>
-                <li>Страниц: 640</li>
-                <li>ISBN: 978-5-496-02463-1</li>
-            </ul>
-            <h3>Подробное описание:</h3>
-            <p id="longdesc">
-                Можно без труда создать добротный веб-сайт, вооружившись обычным компьютером и некоторыми амбициями. Хотите сделать
-                собственный блог, интернет-магазин, форум, ресурс с рекламой мероприятия? Не проблема! Эта доступная книга, не
-                перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых, чтобы создать сайт и
-                запустить его в Вебе.
-            </p>
+                <h3>Подробное описание:</h3>
+                <p id="longdesc">
+                    Можно без труда создать добротный веб-сайт, вооружившись обычным компьютером и некоторыми амбициями. Хотите сделать
+                    собственный блог, интернет-магазин, форум, ресурс с рекламой мероприятия? Не проблема! Эта доступная книга, не
+                    перегруженная терминами, расскажет обо всех приемах, инструментах и навыках, необходимых, чтобы создать сайт и
+                    запустить его в Вебе.
+                </p>
+            </section>
+            <footer>
+                <p>Все права защищены &#169 2018</p>
+            </footer>
         </div>
-        <footer>
-            <hr>
-            <p>Все права защищены &#169 2018</p>
-        </footer>
     </body>
 </html>
