--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
                 </div>
             </section>
             <footer>
-                <p>Все права защищены &#169 2018</p>
+                <p>Все права защищены &#169; 2018</p>
             </footer>
         </div>
     </body>
