--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                 </span>
             </section>
             <footer>
-                <p>Все права защищены &#169 2018</p>
+                <p>Все права защищены &#169; 2018</p>
             </footer>
         </div>
     </body>
