--- a/assets/products/978-5-496-02088-6.html
+++ b/assets/products/978-5-496-02088-6.html
@@ -45,7 +45,7 @@
                 </p>
             </section>
             <footer>
-                <p>Все права защищены &#169 2018</p>
+                <p>Все права защищены &#169; 2018</p>
             </footer>
         </div>
     </body>
