--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
             </section>
             <footer>
-                <p>Все права защищены &#169 2018</p>
+                <p>Все права защищены &#169; 2018</p>
             </footer>
         </div>
     </body>
