--- a/index.html
+++ b/index.html
@@ -2,35 +2,21 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
-        <title>Бестселлеры O'Reilly</title>
+        <title>Welcome to  surfhouse</title>
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
-        <div class="container">
-            <header>
-                <nav>
-                    <a id="logo" href="index.html"><img src="assets/img/logo_oreilly.png"></a>
-                    <ul>
-                        <li id="selected"><a href="index.html">Главная</a></li>
-                        <li><a href="catalog.html">Каталог</a></li>
-                        <li><a href="contact.html">Контакты</a></li>
-                    </ul>
-                </nav>
-            </header>
-            <section>
-                <h1>Бестселлеры O'Reilly</h1>
-                <h2>Добро пожаловать в мир книг издательства O'Reilly</h2>
-                <p class="textjustify">
-                    O'Reilly — одно из крупнейших издательств — начало свою деятельность в 1984 году
-                    с создания руководств для вендоров операционной системы Unix. На сегодняшний день ассортимент
-                    наименований этого издательства весьма широк: от книг для любителей цифровой фотографии до изданий,
-                    предназначенных профессиональным разработчикам программного обеспечения. Книги издательства O'Reilly
-                    отличаются достоверностью, полезны и интересны.
-                </p>
-            </section>
-            <footer>
-                <p>Все права защищены &#169; 2018</p>
-            </footer>
-        </div>
+        <header>
+            <div class="headerInside">
+                <a class="logo" href="#"><img src="assets/img/logo.png" alt="logo"></a>
+
+            </div>
+
+        </header>
+        <section class="content">
+            <div class="contentInside">
+
+            </div>
+        </section>
     </body>
 </html>
