--- a/index.html
+++ b/index.html
@@ -3,20 +3,288 @@
     <head>
         <meta charset="UTF-8">
         <title>Welcome to  surfhouse</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+              integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     </head>
     <body>
         <header>
             <div class="headerInside">
                 <a class="logo" href="#"><img src="assets/img/logo.png" alt="logo"></a>
-
+                <div class="iconsWrap">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-pinterest-p"></i>
+                    <i class="fab fa-instagram"></i>
+                </div>
+                <div class="welcome">
+                    <h1>Welcome to SurfHouse</h1>
+                    <p><em>The only online store you will ever need for all your windsurfing and kitesurfing and SUP needs</em></p>
+                </div>
+                <div class="slide">
+                    <h2>
+                        JP Funride<br>
+                        2014
+                    </h2>
+                    <p>
+                        Super easy going freeride boards based on the X-Cite Ride shape concept with additional
+                        control and super easy jibing.
+                    </p>
+                    <button>buy now</button>
+                </div>
             </div>
-
         </header>
         <section class="content">
             <div class="contentInside">
-
+                <aside class="left">
+                    <nav>
+                        <div></div>
+                        <ul>
+                            <li class="menu_name">menu</li>
+                            <li class="menu_item">About</li>
+                            <li class="menu_item">apparel</li>
+                            <li class="menu_item">surf apparel</li>
+                            <li class="menu_item">windsurf</li>
+                            <li class="menu_item">kitesurf</li>
+                            <li class="menu_item">accessories</li>
+                            <li class="menu_item">sale</li>
+                            <li class="menu_item">brands</li>
+                            <li class="menu_item">blog</li>
+                            <li class="menu_item">Gadgets</li>
+                            <li class="menu_item">cantact</li>
+                        </ul>
+                    </nav>
+                    <div class="nowIsOpen">
+                        <div class="nowIsOpenInside">
+                            <span>
+                                Now<br>
+                                is<br>
+                                open!
+                            </span>
+                        </div>
+                    </div>
+                </aside>
+                <article>
+                    <h2>New products</h2>
+                    <ul>
+                        <li class="productCard new">
+                            <img src="assets/img/products/surf1.jpg" alt="">
+                            <div class="productName">Single Thruster 2014</div>
+                            <div class="productPrice">€.865.00</div>
+                        </li>
+                        <li class="productCard hot">
+                            <img src="assets/img/products/surf2.jpg" alt="">
+                            <div class="productName">Freestyle Wave FSW</div>
+                            <div class="productPrice">€.770.50</div>
+                            <div class="productPriceOld">€.1,270.15</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/surf3.jpg" alt="">
+                            <div class="productName">The White Collection SURFBOARD 2014</div>
+                            <div class="productPrice">€.1,580.70</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/surf4.jpg" alt="">
+                            <div class="productName">OG SCALLOP SOLID</div>
+                            <div class="productPrice">€.765.00</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/surf5.jpg" alt="">
+                            <div class="productName">STRIPE 19 QS</div>
+                            <div class="productPrice">€.230.50</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/surf6.jpg" alt="">
+                            <div class="productName">YOKE 19 QS</div>
+                            <div class="productPrice">€.1,130.70</div>
+                        </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                    <h2>Top products</h2>
+                    <ul>
+                        <li class="productCard">
+                            <img src="assets/img/products/springsuit1.jpg" alt="">
+                            <div class="productName">Ushingham  Lightning 2014 </div>
+                            <div class="productPrice">€.2,960.95</div>
+                            <div class="productPriceOld">€.3,100.15</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/springsuit2.jpg" alt="">
+                            <div class="productName">CYPHER HEAT VES M</div>
+                            <div class="productPrice">€.849.95</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/springsuit3.jpg" alt="">
+                            <div class="productName">SYNCRO WOMENS  QS M</div>
+                            <div class="productPrice">€.1,110.99</div>
+                        </li>
+                    </ul>
+                    <div class="clearfix"></div>
+                    <h2>Sale products</h2>
+                    <ul>
+                        <li class="productCard">
+                            <img src="assets/img/products/gloves.jpg" alt="">
+                            <div class="productName">SYNCRO MENS QS M</div>
+                            <div class="productPrice">€.249.95</div>
+                            <div class="productPriceOld">€.450.15</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/rashguard.jpg" alt="">
+                            <div class="productName">RAMOS - SHIRT FOR MEN</div>
+                            <div class="productPrice">€.459.65</div>
+                            <div class="productPriceOld">€.570.65</div>
+                        </li>
+                        <li class="productCard">
+                            <img src="assets/img/products/wetsuit.jpg" alt="">
+                            <div class="productName">SixSixOne Evo Wired Full Face </div>
+                            <div class="productPrice">€.240.00</div>
+                            <div class="productPriceOld">€.370.65</div>
+                        </li>
+                    </ul>
+                </article>
+                <div class="clearfix"></div>
+                <aside class="bottom">
+                    <div class="brands">
+                        <img src="assets/img/brands/Bic-surf_1.jpg" alt="">
+                        <img src="assets/img/brands/CBC_1.jpg" alt="">
+                        <img src="assets/img/brands/Channel-Islands_2.jpg" alt="">
+                        <img src="assets/img/brands/Cortez_1.jpg" alt="">
+                        <img src="assets/img/brands/Firewire_1.jpg" alt="">
+                        <img src="assets/img/brands/Haydenshapes_1.jpg" alt="">
+                        <img src="assets/img/brands/Lost.jpg" alt="">
+                        <img src="assets/img/brands/Nine-Plus_1.jpg" alt="">
+                    </div>
+                    <div class="istagramFeedWrap">
+                        <div class="instaFeedHead">
+                            <i class="fab fa-instagram"></i>
+                            <span>Instagram feed:</span> #surfhouse
+                        </div>
+                        <div class="instaFeedImages">
+                            <img src="assets/img/instaFeed/1.jpg" alt="">
+                            <img src="assets/img/instaFeed/2.jpg" alt="">
+                            <img src="assets/img/instaFeed/3.jpg" alt="">
+                            <img src="assets/img/instaFeed/4.jpg" alt="">
+                            <img src="assets/img/instaFeed/5.jpg" alt="">
+                            <img src="assets/img/instaFeed/6.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="socialButtonsWrap">
+                        <a href="#">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fab fa-pinterest"></i>
+                        </a>
+                    </div>
+                </aside>
             </div>
         </section>
+        <footer>
+            <div class="footerInside">
+                <div>
+                    <div class="columnHead">
+                        Category
+                    </div>
+                    <div class="columnLinks">
+                        <a href="#">Home</a>
+                        <a href="#">about us</a>
+                        <a href="#">eshop</a>
+                        <a href="#">Features</a>
+                        <a href="#">new collections</a>
+                        <a href="#">blog</a>
+                        <a href="#">contact</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="columnHead">
+                        Our Account
+                    </div>
+                    <div class="columnLinks">
+                        <a href="#">Your Account</a>
+                        <a href="#">Personal information</a>
+                        <a href="#">Addresses</a>
+                        <a href="#">Discount</a>
+                        <a href="#">Orders history</a>
+                        <a href="#">Addresses</a>
+                        <a href="#">Search Terms</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="columnHead">
+                        Our Support
+                    </div>
+                    <div class="columnLinks">
+                        <a href="#">Site Map</a>
+                        <a href="#">Search Terms</a>
+                        <a href="#">Advanced Search</a>
+                        <a href="#">Mobile</a>
+                        <a href="#">Contact Us</a>
+                        <a href="#">Mobile</a>
+                        <a href="#">Addresses</a>
+                    </div>
+                </div>
+                <div class="newsLetter">
+                    <div class="columnHead">
+                        Newsletter
+                    </div>
+                    <div class="columnNewsLetter">
+                        <div class="newsLetterText">
+                            Join thousands of other people subscribe to our news
+                        </div>
+                        <input type="text" placeholder="INSERT EMAIL">
+                        <button>SUBMIT</button>
+                        <div class="cardsWrap">
+                            <img src="assets/img/paymentMethods/american-express.jpg" alt="">
+                            <img src="assets/img/paymentMethods/master-card.jpg" alt="">
+                            <img src="assets/img/paymentMethods/maestro.jpg" alt="">
+                            <img src="assets/img/paymentMethods/paypal.jpg" alt="">
+                            <img src="assets/img/paymentMethods/discover.jpg" alt="">
+                            <img src="assets/img/paymentMethods/visa.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="about">
+                    <div class="columnHead">
+                        About Us
+                    </div>
+                    <div class="columnAboutUs">
+                        <div class="aboutText">
+                            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                            ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis
+                            parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
+                            pellentesque eu, pretium quis, sem.
+                        </div>
+                        <div class="aboutPhone">
+                            <span>Phone:</span> 1-999-342-9876
+                        </div>
+                        <div class="aboutEmail">
+                            <span>E-mail:</span> info@surfhouse.com
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footerCopyrights">
+                <div class="copyrightsInside">
+                    <div class="footerCopySign">
+                        2018  SURFHOUSE. All rights reserved
+                    </div>
+                    <div class="footerSocials">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-pinterest"></i>
+                        <i class="fab fa-google-plus"></i>
+                        <i class="fab fa-tumblr-square"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fas fa-rss"></i>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
